# Mailman

./: .gitignore  README.md  USAGE.md  activation.py  config.py  copyright.js  homepage.html  mailSender.py  main.py  mdConverter.py  pyproject.toml  requirements.txt
