[tool.poetry]
name = "repl_python3_Mailman"
version = "0.1.0"
description = ""
authors = ["Drakonzai <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
Markdown = "^3.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
